--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -1310,9 +1310,9 @@ N.B.: il gruppo ha preso atto che alcuni sprint potranno essere meno produttivi 
 	\item Romina aggiornerà il Piano di Progetto allo sprint corrente
 	\item Lorenzo proseguirà con gli unit test
 	\item Matteo procederà con il Manuale Utente
-	\item Erica rocederà con la Specifica Architetturale e la Specifica Tecnica
+	\item Erica procederà con la Specifica Architetturale e la Specifica Tecnica
 	\item Nicolas inserirà una pagina per l’admin di gestione dei ruoli 
-	\item Francesco si occuperà di ggiungere eventuali componenti grafiche di alert per i guasti
+	\item Francesco si occuperà di aggiungere eventuali componenti grafiche di alert per i guasti
 \end{itemize}
 \textbf{Difficoltà incontrate:}
 \begin{itemize}
@@ -1328,7 +1328,7 @@ N.B.: il gruppo ha preso atto che alcuni sprint potranno essere meno produttivi 
 		\hline
 		\textbf{Ruolo}  & \textbf{Costo orario (\euro)} & \textbf{Ore} & \textbf{Prezzo (\euro)} \\
 		\hline
-		Responsabile    & 30                            & 73(+12)       & 360                      \\
+		Responsabile    & 30                            & 71(+10)       & 300                      \\
 		\hline
 		Amministratore  & 20                            & 48(+3)       & 60                      \\
 		\hline
@@ -1336,12 +1336,12 @@ N.B.: il gruppo ha preso atto che alcuni sprint potranno essere meno produttivi 
 		\hline
 		Progettista     & 25                            & 131       & 0                     \\
 		\hline
-		Programmatore   & 15                            & 131(+25)      & 375                    \\
+		Programmatore   & 15                            & 127(+21)      & 315                    \\
 		\hline
 		Verificatore    & 15                            & 90(+10)       & 150                      \\
 		\hline
 		\hline
-		\textbf{Totale} &                               & 573          & 12240                    \\
+		\textbf{Totale} &                               & 567          & 12120                    \\
 		\hline
 	\end{tabularx}\\[8pt]
 	\mbox{}\\
@@ -1364,12 +1364,12 @@ N.B.: il gruppo ha preso atto che alcuni sprint potranno essere meno produttivi 
 		\hline
 		Ceccato Francesco & 10(+2)             	  & 5            		& 17            & 22 		 & 22(+4) 			& 16(+2)     \\
 		\hline
-		Salami Lorenzo    & 10(+2)                & 6              		& 16     		& 23 		 & 21(+6)    	 	& 14(+2)	\\
+		Salami Lorenzo    & 10	                & 6              		& 16     		& 23 		 & 21(+2)    	 	& 14(+2)	\\
 		\hline
 		Soldà Matteo      & 14                    & 6          			& 15            & 22    	 & 22(+2) 			& 14(+2)  	\\
 		\hline
 		\hline
-		\textbf{Totale}   & 73(+12)            & 48(+3)          & 100(+0)        & 131(+0)		 & 131(+25) & 90(+10) \\
+		\textbf{Totale}   & 73(+10)            & 48(+3)          & 100(+0)        & 131(+0)		 & 131(+21) & 90(+10) \\
 		\hline
 	\end{tabularx}\\[8pt]
 	\mbox{}\\
